--- a/Python/website.html
+++ b/Python/website.html
@@ -59,11 +59,18 @@
         </div>
       </div>
     </div>
+    <div class="card">
+      <div class="card-header bg-info text-white">
+        Articles
+      </div>
   </div>
+  
 
   <!-- Include Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script src="get-articles.js"></script>
+  
 </body>
 </html>
